# stepik_fastapi_v1

./: .gitignore  alembic.ini  pyproject.toml
app/: auth.py  config.py  database.py  db_depends.py  main.py  schemas.py
app/migrations/versions/: 13ca67eccee4_create_search_vector.py  1e1082889333_initial_migration_for_postgres.py  53452cce82f3_add_orders_and_order_item.py  57e59206d6da_add_column_productmodel_created_at_and_.py  69880a966de8_modify_check.py  8aa100021851_add_user_model.py  ca14422d9bf4_create_cart.py  ce5ac2afc19e_create_reviews.py  e939f0cb4d7b_add_check.py  e9aef610892a_added_column_rating.py
app/models/: __init__.py  cart_items.py  categories.py  orders.py  products.py  reviews.py  users.py
app/routers/: cart.py  categories.py  orders.py  products.py  reviews.py  users.py
